fase_4/src/c_ast_descendente/ConstructorAST.java
/* Generated By:JavaCC: Do not edit this line. ConstructorAST.java */
package c_ast_descendente;

import asint.TinyASint.Dec;
import asint.TinyASint.Exp;
import asint.TinyASint.Inst;
import asint.TinyASint.LDecs;
import asint.TinyASint.LInst;
import asint.TinyASint.Prog;
import asint.TinyASint.StringLocalizado;
import asint.TinyASint.Tipo;
import asint.TinyASint.LParams;
import asint.TinyASint.Bloque;
import asint.TinyASint.Param;
import asint.TinyASint.LCampos;
import asint.TinyASint.Campo;
import asint.TinyASint.LInst_aux;
import asint.TinyASint.LReal_params;
import semops.SemOps;


public class ConstructorAST implements ConstructorASTConstants {
   private SemOps sem = new SemOps();

  final public Prog Init() throws ParseException {
                       Prog prog;
    prog = PROGRAMA();
    jj_consume_token(0);
                       {if (true) return prog;}
    throw new Error("Missing return statement in function");
  }

  final public Prog PROGRAMA() throws ParseException {
                       LDecs ldecs; LInst linst;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case var:
    case type:
    case proc:
      ldecs = LDECS();
      jj_consume_token(46);
      linst = LINST();
                                                             {if (true) return sem.programa(ldecs,linst);}
      break;
    case r_if:
    case r_while:
    case read:
    case write:
    case nl:
    case r_new:
    case delete:
    case call:
    case not:
    case r_true:
    case r_false:
    case r_null:
    case identificador:
    case numeroEntero:
    case numeroReal:
    case str:
    case 48:
    case 54:
    case 58:
    case 59:
      linst = LINST();
                                         {if (true) return sem.programa(null,linst);}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LDecs LDECS() throws ParseException {
                       Dec dec; LDecs decs,result;
    dec = DEC();
    result = RDECS(sem.decs_una(dec));
                       {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public LDecs RDECS(LDecs res_h) throws ParseException {
                                 Dec dec; LDecs rdecs;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      jj_consume_token(47);
      dec = DEC();
      rdecs = RDECS(sem.decs_muchas(res_h,dec));
                      {if (true) return rdecs;}
      break;
    default:
      jj_la1[1] = jj_gen;
                        {if (true) return res_h;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Dec DEC() throws ParseException {
                    Token id;Tipo tipo;Dec res;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case var:
      jj_consume_token(var);
      tipo = TIPO();
      id = jj_consume_token(identificador);
                                                              {if (true) return sem.dec_var(tipo,sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    case type:
      jj_consume_token(type);
      tipo = TIPO();
      id = jj_consume_token(identificador);
                                                               {if (true) return sem.dec_type(tipo,sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    case proc:
      jj_consume_token(proc);
      id = jj_consume_token(identificador);
      jj_consume_token(48);
      res = RES_DEC(sem.str(id.image,id.beginLine,id.beginColumn));
                                                                                                                  {if (true) return res;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Dec RES_DEC(StringLocalizado id_h) throws ParseException {
                                        LParams lparams; Bloque bloque;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case r_int:
    case r_real:
    case r_bool:
    case r_string:
    case array:
    case record:
    case pointer:
    case identificador:
      lparams = LPARAMS();
      jj_consume_token(49);
      bloque = BLOQUE();
                                                                     {if (true) return sem.dec_proc_con_params(id_h,lparams,bloque);}
      break;
    case 49:
      jj_consume_token(49);
      bloque = BLOQUE();
                                                   {if (true) return sem.dec_proc_sin_params(id_h,bloque);}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LParams LPARAMS() throws ParseException {
                        Param param; LParams rlparams;
    param = PARAM();
    rlparams = RLPARAMS(sem.l_params_uno(param));
                      {if (true) return rlparams;}
    throw new Error("Missing return statement in function");
  }

  final public LParams RLPARAMS(LParams param_h) throws ParseException {
                                       Param param; LParams rlparams;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      param = PARAM();
                                                       {if (true) return RLPARAMS(sem.l_params_muchos(param_h,param));}
      break;
    default:
      jj_la1[4] = jj_gen;
                                     {if (true) return param_h;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Param PARAM() throws ParseException {
                      Tipo tipo;
    tipo = TIPO();
                                    {if (true) return RPARAM(tipo);}
    throw new Error("Missing return statement in function");
  }

  final public Param RPARAM(Tipo tipo_h) throws ParseException {
                                 Token id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case identificador:
      id = jj_consume_token(identificador);
                                                        {if (true) return sem.param_sin_amp(tipo_h,sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    case 51:
      jj_consume_token(51);
      id = jj_consume_token(identificador);
                                                           {if (true) return sem.param_con_amp(tipo_h,sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Tipo TIPO() throws ParseException {
                 Token id,num; Tipo tipo; LCampos lcampos;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case r_int:
      jj_consume_token(r_int);
                               {if (true) return sem.tipo_Entero();}
      break;
    case r_real:
      jj_consume_token(r_real);
                                {if (true) return sem.tipo_Real();}
      break;
    case r_bool:
      jj_consume_token(r_bool);
                                {if (true) return sem.tipo_Bool();}
      break;
    case r_string:
      jj_consume_token(r_string);
                                  {if (true) return sem.tipo_String();}
      break;
    case identificador:
      id = jj_consume_token(identificador);
                                            {if (true) return sem.tipo_Id(sem.str(id.image,id.beginLine,id.beginColumn));}
      break;
    case array:
      jj_consume_token(array);
      jj_consume_token(52);
      num = jj_consume_token(numeroEntero);
      jj_consume_token(53);
      jj_consume_token(of);
      tipo = TIPO();
                                                                               {if (true) return sem.tipo_Array(sem.str(num.image,num.beginLine,num.beginColumn),tipo);}
      break;
    case record:
      jj_consume_token(record);
      jj_consume_token(54);
      lcampos = CAMPOS();
      jj_consume_token(55);
                                                           {if (true) return sem.tipo_Reg(lcampos);}
      break;
    case pointer:
      jj_consume_token(pointer);
      tipo = TIPO();
                                               {if (true) return sem.tipo_Puntero(tipo);}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LCampos CAMPOS() throws ParseException {
                       Campo campo; LCampos rcampos;
    campo = CAMPO();
    rcampos = RCAMPOS(sem.l_campos_uno(campo));
                                                                                   {if (true) return rcampos;}
    throw new Error("Missing return statement in function");
  }

  final public LCampos RCAMPOS(LCampos res_h) throws ParseException {
                                     Campo campo; LCampos rcampos;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      jj_consume_token(47);
      campo = CAMPO();
      rcampos = RCAMPOS(sem.l_campos_muchos(res_h,campo));
                                                                                                            {if (true) return rcampos;}
      break;
    default:
      jj_la1[7] = jj_gen;
                                     {if (true) return res_h;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Campo CAMPO() throws ParseException {
                    Tipo tipo; Token id;
    tipo = TIPO();
    id = jj_consume_token(identificador);
                                                        {if (true) return sem.campo(tipo,sem.str(id.image,id.beginLine,id.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public LInst LINST() throws ParseException {
                    Inst inst; LInst rlinst;
    inst = INST();
    rlinst = RLINST(sem.l_inst_una(inst));
               {if (true) return rlinst;}
    throw new Error("Missing return statement in function");
  }

  final public LInst RLINST(LInst res_h) throws ParseException {
                                Inst inst; LInst rlinst;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      jj_consume_token(47);
      inst = INST();
      rlinst = RLINST(sem.l_inst_muchas(res_h,inst));
                                                                                      {if (true) return rlinst;}
      break;
    default:
      jj_la1[8] = jj_gen;
                       {if (true) return res_h;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst INST() throws ParseException {
               Exp exp1,exp2; LInst_aux linst_aux; Inst res_if,res_call; Token id; Bloque bloque;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case not:
    case r_true:
    case r_false:
    case r_null:
    case identificador:
    case numeroEntero:
    case numeroReal:
    case str:
    case 48:
    case 58:
    case 59:
      exp1 = E0();
      jj_consume_token(56);
      exp2 = E0();
                                             {if (true) return sem.inst_asig(exp1,exp2);}
      break;
    case r_if:
      jj_consume_token(r_if);
      exp1 = E0();
      jj_consume_token(then);
      linst_aux = AUX_LINST();
      res_if = RES_IF(exp1,linst_aux);
                                                                                                   {if (true) return res_if;}
      break;
    case r_while:
      jj_consume_token(r_while);
      exp1 = E0();
      jj_consume_token(r_do);
      linst_aux = AUX_LINST();
      jj_consume_token(endwhile);
                                                                                   {if (true) return sem.inst_while(exp1,linst_aux);}
      break;
    case read:
      jj_consume_token(read);
      exp1 = E0();
                                     {if (true) return sem.inst_read(exp1);}
      break;
    case write:
      jj_consume_token(write);
      exp1 = E0();
                                      {if (true) return sem.inst_write(exp1);}
      break;
    case nl:
      jj_consume_token(nl);
                       {if (true) return sem.inst_nl();}
      break;
    case r_new:
      jj_consume_token(r_new);
      exp1 = E0();
                                      {if (true) return sem.inst_new(exp1);}
      break;
    case delete:
      jj_consume_token(delete);
      exp1 = E0();
                                       {if (true) return sem.inst_delete(exp1);}
      break;
    case call:
      jj_consume_token(call);
      id = jj_consume_token(identificador);
      jj_consume_token(48);
      res_call = RES_CALL(sem.str(id.image,id.beginLine,id.beginColumn));
                                                                                                                      {if (true) return res_call;}
      break;
    case 54:
      bloque = BLOQUE();
                                     {if (true) return sem.inst_compuesta(bloque);}
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst RES_CALL(StringLocalizado id_h) throws ParseException {
                                        LReal_params r_params;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 49:
      jj_consume_token(49);
                               {if (true) return sem.inst_call_sin_params(id_h);}
      break;
    case not:
    case r_true:
    case r_false:
    case r_null:
    case identificador:
    case numeroEntero:
    case numeroReal:
    case str:
    case 48:
    case 58:
    case 59:
      r_params = REAL_PARAMS();
      jj_consume_token(49);
                                                         {if (true) return sem.inst_call_con_params(id_h,r_params);}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LInst_aux AUX_LINST() throws ParseException {
                            LInst linst;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case r_if:
    case r_while:
    case read:
    case write:
    case nl:
    case r_new:
    case delete:
    case call:
    case not:
    case r_true:
    case r_false:
    case r_null:
    case identificador:
    case numeroEntero:
    case numeroReal:
    case str:
    case 48:
    case 54:
    case 58:
    case 59:
      linst = LINST();
                                        {if (true) return sem.linst_aux(linst);}
      break;
    default:
      jj_la1[11] = jj_gen;
                         {if (true) return sem.linst_aux_vacia();}
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst RES_IF(Exp exp_h, LInst_aux linst_aux_h) throws ParseException {
                                                    LInst_aux linst_aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case r_else:
      jj_consume_token(r_else);
      linst_aux = AUX_LINST();
      jj_consume_token(endif);
                                                              {if (true) return sem.inst_if_then_else(exp_h,linst_aux_h,linst_aux);}
      break;
    case endif:
      jj_consume_token(endif);
                             {if (true) return sem.inst_if_then(exp_h,linst_aux_h);}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LReal_params REAL_PARAMS() throws ParseException {
                                 Exp exp; LReal_params res_params;
    exp = E0();
    res_params = RES_PARAMS(sem.l_real_params_uno(exp));
                                                                                       {if (true) return res_params;}
    throw new Error("Missing return statement in function");
  }

  final public LReal_params RES_PARAMS(LReal_params params_h) throws ParseException {
                                                     Exp exp; LReal_params res_params;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      exp = E0();
      res_params = RES_PARAMS(sem.l_real_params_muchos(params_h,exp));
                                                                                                               {if (true) return res_params;}
      break;
    default:
      jj_la1[13] = jj_gen;
                                  {if (true) return params_h;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Bloque BLOQUE() throws ParseException {
                      Bloque b;
    jj_consume_token(54);
    b = RBLOQUE();
                                                      {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public Bloque RBLOQUE() throws ParseException {
                       Prog prog;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 55:
      jj_consume_token(55);
                             {if (true) return sem.bloque_vacio();}
      break;
    case var:
    case type:
    case proc:
    case r_if:
    case r_while:
    case read:
    case write:
    case nl:
    case r_new:
    case delete:
    case call:
    case not:
    case r_true:
    case r_false:
    case r_null:
    case identificador:
    case numeroEntero:
    case numeroReal:
    case str:
    case 48:
    case 54:
    case 58:
    case 59:
      prog = PROGRAMA();
      jj_consume_token(55);
                                                 {if (true) return sem.bloque(prog);}
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E0() throws ParseException {
               Exp e,res;
    e = E1();
    res = RES0(e);
                                                     {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RES0(Exp exp_h) throws ParseException {
                          Exp e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 57:
      jj_consume_token(57);
      e = E0();
                                        {if (true) return sem.exp("+",exp_h,e);}
      break;
    case 58:
      jj_consume_token(58);
      e = E1();
                                          {if (true) return sem.exp("-",exp_h,e);}
      break;
    default:
      jj_la1[15] = jj_gen;
                             {if (true) return exp_h;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E1() throws ParseException {
               Exp e,res;
    e = E2();
    res = RES1(e);
                                                     {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RES1(Exp exp_h) throws ParseException {
                          String op; Exp e,res;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case and:
    case or:
      op = OP1AI();
      e = E2();
      res = RES1(sem.exp(op,exp_h,e));
                                                                                  {if (true) return res;}
      break;
    default:
      jj_la1[16] = jj_gen;
                              {if (true) return exp_h;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E2() throws ParseException {
               Exp e,res;
    e = E3();
    res = RES2(e);
                                                     {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RES2(Exp exp_h) throws ParseException {
                          String op; Exp e,res;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 60:
    case 61:
    case 62:
    case 63:
    case 64:
    case 65:
      op = OP2AI();
      e = E3();
      res = RES2(sem.exp(op,exp_h,e));
                                                                      {if (true) return res;}
      break;
    default:
      jj_la1[17] = jj_gen;
                {if (true) return exp_h;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E3() throws ParseException {
               Exp e,res;
    e = E4();
    res = RES3(e);
                                                     {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RES3(Exp exp_h) throws ParseException {
                          String op; Exp e,res;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 59:
    case 66:
    case 67:
      op = OP3NA();
      e = E4();
                                                 {if (true) return sem.exp(op,exp_h,e);}
      break;
    default:
      jj_la1[18] = jj_gen;
                            {if (true) return exp_h;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E4() throws ParseException {
               Exp e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 58:
      jj_consume_token(58);
      e = E5();
                                      {if (true) return sem.menos_unario(e);}
      break;
    case not:
      jj_consume_token(not);
      e = E4();
                                         {if (true) return sem.c_not(e);}
      break;
    case r_true:
    case r_false:
    case r_null:
    case identificador:
    case numeroEntero:
    case numeroReal:
    case str:
    case 48:
    case 59:
      e = E5();
                                   {if (true) return e;}
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E5() throws ParseException {
               Exp e,res;
    e = E6();
    res = RES_RES5(e);
                                                         {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RES_RES5(Exp exp_h) throws ParseException {
                              Exp e,res;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case punto:
    case flecha:
    case 52:
      e = RES5(exp_h);
      res = RES_RES5(e);
                                                           {if (true) return res;}
      break;
    default:
      jj_la1[20] = jj_gen;
                         {if (true) return exp_h;}
    }
    throw new Error("Missing return statement in function");
  }
